Make a pop-up and some logos

--- a/src/test/css/style.css
+++ b/src/test/css/style.css
@@ -6,9 +6,7 @@
 
 html,
 body {
-    
     overflow-x: hidden;
-    
 }
 
 canvas {
@@ -17,13 +15,15 @@ canvas {
     top: 0;
     left: 0;
     outline: none;
-    z-index: 0; /* Changed from -1 to 0 */
+    z-index: 0;
+    /* Changed from -1 to 0 */
     width: 100%;
     height: 100%;
 }
 
 .navigation-arrows {
-    display: none; /* Initially hidden */
+    display: none;
+    /* Initially hidden */
     position: fixed;
     bottom: 30px;
     left: 50%;
@@ -50,4 +50,55 @@ canvas {
 
 .arrow:hover {
     background-color: rgba(0, 0, 0, 0.8);
+}
+
+#popup-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+#popup {
+    width: 75%;
+    background-color: white;
+    padding: 40px 20px; /* Increased top and bottom padding */
+    border-radius: 10px;
+    text-align: center;
+}
+
+#popup h1 {
+    font-size: 50px;
+    margin-bottom: 20px; /* Added margin below h1 */
+}
+
+#popup p {
+    font-size: 25px;
+    margin-bottom: 20px; /* Added margin below p */
+}
+
+#popup-button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 30px;
+    margin-top: 20px;
+}
+
+#popup-button:disabled {
+    background-color: #cccccc;
+    color: #666666;
+    cursor: not-allowed;
+}
+
+#popup-button:enabled {
+    background-color: #3498db;
+    color: white;
 }
