--- a/src/test/css/style.css
+++ b/src/test/css/style.css
@@ -206,7 +206,9 @@ canvas {
     color: #000;
     background: #ffc800;
     box-shadow: 10px 10px 0 #000;
-    transition: transform 0.1s, box-shadow 0.1s;
+    transition: transform 0.1s, box-shadow 0.1s, opacity 0.5s ease-in-out;
+    visibility: hidden;
+    opacity: 0;
 }
 
 /* Responsive adjustments for smaller screens */
@@ -503,29 +505,7 @@ canvas {
 }
 
 
-/* Preloader Styles */
-
-.preloader {
-    border: 4px solid #f3f3f3;
-    /* Light grey */
-    border-top: 4px solid #3498db;
-    /* Blue */
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    animation: spin 1s linear infinite;
-    margin: 20px auto;
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
+/* Preloader styles removed, now handled by Preloader.js */
 
 #loading-content p {
     text-align: center;
